style.css
*
{
    margin: 0; 
    padding: 0;
    font-family: 'poppins', sans-serif; 
    box-sizing: border-box; 
}

.container{
    width: 100vw;
    height: 100vh; 
    background-image: url(images/background23.jpeg); 
    background-position: center; 
    background-size: cover; 
    padding: 0 8%; 
}

.logo{
    width: 120px; 
    padding: 20px 0; 
    cursor: pointer; 
}

.man{
    top: 75%; 
    right: 650px; 
    position: absolute;
    transform: translateY(-50%); 

}

.content{
    top: 50%; 
    right: 550px; 
    position: absolute;
    transform: translateY(-50%); 
    color: #fff; 
}

.content h1{
    font-size: 60px; 
    font-weight: 600; 
    margin-bottom: 20px; 
}

.content h1 span{
    color: #fff; 
}

.content h2{
    font-size: 20px; 
    font-weight: 200; 
}

.content button{
    background: transparent; 
    border: 2px solid #fff; 
    outline: none; 
    padding: 12px 25px; 
    color: #fff; 
    display: flex; 
    align-items: center; 
    margin-top: 40px; 
    margin-left: 200px; 
    cursor: pointer; 
    z-index: 10;
}

.content button img{
    width: 15px; 
    margin-left: 10px; 
}

.launch-time{
    display: flex; 
    margin-left: 65px; 
}

.launch-time div{
    flex-basis: 150px; 
}

.launch-time div p{
    font-size: 60px; 
    margin-bottom: 0px; 
}

.snore{
    width: 250px; 
    position: absolute;
    right: 50%; 
    bottom: 0; 
    animation: snore 4s linear infinite; 
}
@keyframes snore{
    0%{
        bottom: 0; 
        opacity: 0; 
    }
    50%{
        bottom:15%; 
        opacity: 1; 
    }
    100%{
        bottom: 30%; 
        opacity: 0; 
    }
}

